--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-torch>=1.12
+torch==2.0.1+cu118 --index-url https://download.pytorch.org/whl/cu118
 torchvision>=0.5.0
 loguru
+timm==0.6.13
+einops
+xformers
